--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,6 +8,7 @@
     position: absolute;
     top: 0;
     right: 0;
+    display: none;
 }
 
 .menu-opcoes ul {
@@ -21,16 +22,43 @@
 body {
     color: #333333;
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    margin: 0;
 }
 
+ul {
+    list-style: none;
+    position: relative;
+}
+
+ul li:hover {
+    background: #ccc;
+}
+
+ul li {
+    display: block;
+}
+
+.sub-menu {
+    position: absolute;
+    width: 200px;
+    right: -200px;
+    top: 0;
+}
+
+.sub-menu li {
+    margin-bottom: 0 !important;
+    padding-left: 20px !important;
+    width: auto;
+}
 .menu-opcoes ul li {
-    display: inline;
+    display: inline-block;
     margin-left: 20px;
+    margin: 5px;
 }
 
 .container {
     margin: 0 auto;
-    width: 940px;
+    width: 96%;
   }
  
 .logotipo {
@@ -44,15 +72,20 @@ header {
 }
  
 .menu-opcoes {
-    position: absolute;
     bottom: 0;
     right: 0;
+    position: static;
+    text-align: center;
+}
+
+.menu-opcoes a:hover {
+    color: #007dc6;
+}
+.menu-opcoes a:active {
+     color: #867dc6;
 }
 
 .busca, .menu-departamentos {
-  background-color: #dcdcdc;
-  
-  text-transform: uppercase;
   margin-right: 10px;
   width: 230px;
   float: left;
@@ -92,26 +125,40 @@ header {
 }
 
 .painel {
-    margin: 10px 0;
-    padding: 10px;
-    width: 445px;
+    /* margin: 10px 0;
+    padding: 10px; */
+    width: auto;
 }
 
 .novidades {
     float: left;
+    background-color: #f5dcdc;
+    background: linear-gradient(#f5dcdc, #bebef4);
+    background-color: rgb(170, 167, 167);
 }
 
 .mais-vendidos {
     float: right;
+    background: #dcdcf5;
+    background: linear-gradient(#dcdcf5, #f4bebe);
+    background-color: rgb(128, 72, 72);
 }
 
 .painel li {
     display: inline-block;
     vertical-align: top;
-    width: 140px;
-    margin: 2px;
+    width: 30%;
+    margin: 1%;
     padding-bottom: 10px;
- } 
+}
+
+.painel img {
+    width: 100%;
+}
+
+/*.painel figure {
+    margin: 0 !important;
+}*/
 
 .painel h2 {
     font-size: 24px;
@@ -126,14 +173,6 @@ header {
     text-align: center;
     text-decoration: none;
 }
-
-.novidades {
-    background-color: #f5dcdc;
-}
-
-.mais-vendidos {
-    background-color: #dcdcf5;
-} 
 
 footer {
     background-image: url(../img/fundo-rodape.png);
@@ -176,4 +215,92 @@ footer .container {
 
 .social a[href*="plus.google.com"] {
     background-image: url(../img/googleplus.png);
+}
+
+.menu-departamentos li ul {
+    display: none;
+}
+
+.menu-departamentos li:hover ul {
+    display: block;
+}
+
+.menu-departamentos ul ul li {
+}
+
+.menu-departamentos li li a:before {
+    
+    padding-right: 3px;
+    margin-right: 5px;
+}
+.painel h2:before {
+    content: '\2756';
+    padding-right: 5px;
+    opacity: 0.4;
+}
+
+.painel {
+    border-radius: 4px;
+    box-shadow: inset 1px 1px 4px #999;
+}
+
+.painel h2 {
+    text-shadow: 1px 1px 2px rgba(255,255,255,0.8);
+}
+
+/* RESPONSÁVEL POR FAZER O FUNDO (FALTA AJUSTAR LAYOUT) */
+.painel li:hover {
+    background-color: rgba(255,255,255,0.8);
+    box-shadow: 0 0 5px #333;
+    transition: 0.7s;
+    transform: scale(1.2);
+    transform: scale(1.2) rotate(-5deg);
+    transition: 0.7s ease-in;
+  }
+
+.painel li {
+    transition: 0.7s ease-out;
+}
+
+/* */
+.busca {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.painel li:nth-child(2n):hover {
+transform: scale(1.2) rotate(5deg);
+}
+
+header h1 {
+    text-align: center;
+}
+
+header h1 img {
+    max-width: 50%;
+}
+
+.busca, .menu-departamentos, .destaque img {
+  margin-right: 0;
+  width: 70%;
+}
+
+
+@media only screen and (max-width: 780px) {
+
+    .painel li {
+        width: 47%; 
+    }
+
+    .busca, .menu-departamentos, .destaque img {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+
+    .painel li {
+        width: 100%; 
+    }
+
 }
