--- a/css/sobre.css
+++ b/css/sobre.css
@@ -51,3 +51,18 @@ p {
     float: right;
     margin: 0 0 10px 10px;
 }
+#familia-pelho img {
+    width: 100%;
+}   
+
+p:first-letter {
+    font-weight: bold;
+}
+
+h1 + p {
+    text-indent: 0;
+}
+
+p:first-line {
+    font-variant: small-caps;
+}
