--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,88 +1,88 @@
 .sacola {
-    background: url(../img/sacola.png) no-repeat top right;
-    font-size: 14px;
-    padding-right: 35px;
-    padding-top: 8px;
-    text-align: right;
-    width: 140px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: none;
+	background: url(../img/sacola.png) no-repeat top right;
+	font-size: 14px;
+	padding-right: 35px;
+	padding-top: 8px;
+	text-align: right;
+	width: 140px;
+	position: absolute;
+	top: 0;
+	right: 0;
+	display: none;
 }
 
 .menu-opcoes ul {
-    font-size: 15px;
+	font-size: 15px;
 }
 
 .menu-opcoes a {
-    color: #003366;
+	color: #003366;
 }
 
 body {
-    color: #333333;
-    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-    margin: 0;
+	color: #333333;
+	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	margin: 0;
 }
 
 ul {
-    list-style: none;
-    position: relative;
+	list-style: none;
+	position: relative;
 }
 
 ul li:hover {
-    background: #ccc;
+	background: #ccc;
 }
 
 ul li {
-    display: block;
+	display: block;
 }
 
 .sub-menu {
-    position: absolute;
-    width: 200px;
-    right: -200px;
-    top: 0;
+	position: absolute;
+	width: 200px;
+	right: -200px;
+	top: 0;
 }
 
 .sub-menu li {
-    margin-bottom: 0 !important;
-    padding-left: 20px !important;
-    width: auto;
+	margin-bottom: 0 !important;
+	padding-left: 20px !important;
+	width: auto;
 }
 .menu-opcoes ul li {
-    display: inline-block;
-    margin-left: 20px;
-    margin: 5px;
+	display: inline-block;
+	
+	margin: 5px;
 }
 
 .container {
-    margin: 0 auto;
-    width: 96%;
+	margin: 0 auto;
+	width: 96%;
   }
  
 .logotipo {
-    position: relative;
-    top: 20px;
-    left: 50px;
+	position: relative;
+	top: 20px;
+	left: 50px;
 }
 
 header {
-    position: relative;
+	position: relative;
 }
  
 .menu-opcoes {
-    bottom: 0;
-    right: 0;
-    position: static;
-    text-align: center;
+	bottom: 0;
+	right: 0;
+	position: static;
+	text-align: center;
 }
 
 .menu-opcoes a:hover {
-    color: #007dc6;
+	color: #007dc6;
 }
 .menu-opcoes a:active {
-     color: #867dc6;
+	 color: #867dc6;
 }
 
 .busca, .menu-departamentos {
@@ -107,165 +107,165 @@ header {
 } 
 
 .busca input {
-    vertical-align: middle;
+	vertical-align: middle;
 }
 
 .busca input[type=search] {
-    width: 170px;
+	width: 170px;
 }
 
 .menu-departamentos {
-    clear: left;
-    margin-top: 10px;
-    padding-bottom: 10px;
+	clear: left;
+	margin-top: 10px;
+	padding-bottom: 10px;
 }
 
 .destaque {
-    margin-top: 10px;
+	margin-top: 10px;
 }
 
 .painel {
-    /* margin: 10px 0;
-    padding: 10px; */
-    width: auto;
+	/* margin: 10px 0;
+	padding: 10px; */
+	width: auto;
 }
 
 .novidades {
-    float: left;
-    background-color: #f5dcdc;
-    background: linear-gradient(#f5dcdc, #bebef4);
-    background-color: rgb(170, 167, 167);
+	float: left;
+	background-color: #f5dcdc;
+	background: linear-gradient(#f5dcdc, #bebef4);
+	background-color: rgb(170, 167, 167);
 }
 
 .mais-vendidos {
-    float: right;
-    background: #dcdcf5;
-    background: linear-gradient(#dcdcf5, #f4bebe);
-    background-color: rgb(128, 72, 72);
+	float: right;
+	background: #dcdcf5;
+	background: linear-gradient(#dcdcf5, #f4bebe);
+	background-color: rgb(128, 72, 72);
 }
 
 .painel li {
-    display: inline-block;
-    vertical-align: top;
-    width: 30%;
-    margin: 1%;
-    padding-bottom: 10px;
+	display: inline-block;
+	vertical-align: top;
+	width: 30%;
+	margin: 1%;
+	padding-bottom: 10px;
 }
 
 .painel img {
-    width: 100%;
+	width: 100%;
 }
 
 /*.painel figure {
-    margin: 0 !important;
+	margin: 0 !important;
 }*/
 
 .painel h2 {
-    font-size: 24px;
-    font-weight: bold;
-    text-transform: uppercase;
-    margin-bottom: 10px;
+	font-size: 24px;
+	font-weight: bold;
+	text-transform: uppercase;
+	margin-bottom: 10px;
 }
 
 .painel a {
-    color: #333;
-    font-size: 14px;
-    text-align: center;
-    text-decoration: none;
+	color: #333;
+	font-size: 14px;
+	text-align: center;
+	text-decoration: none;
 }
 
 footer {
-    background-image: url(../img/fundo-rodape.png);
-    clear: both;
-    padding: 20px 0;
+	background-image: url(../img/fundo-rodape.png);
+	clear: both;
+	padding: 20px 0;
 }
 
 footer .container {
-    position: relative;
+	position: relative;
 }
 
 .social {
-    position: absolute;
-    top: 12px;
-    right: 0;
+	position: absolute;
+	top: 12px;
+	right: 0;
 }
 
 .social a {
-    /* tamanho da imagem */
-    height: 32px;
-    width: 32px;
+	/* tamanho da imagem */
+	height: 32px;
+	width: 32px;
 
-    /* image replacement */
-    display: block;
-    text-indent: -9999px;  
+	/* image replacement */
+	display: block;
+	text-indent: -9999px;  
 }
 
 .social li {
-    float: left;
-    margin-left: 25px;
+	float: left;
+	margin-left: 25px;
 }
 
 .social a[href*="facebook.com"] {
-    background-image: url(../img/facebook.png);
+	background-image: url(../img/facebook.png);
 }
 
 .social a[href*="twitter.com"] {
-    background-image: url(../img/twitter.png);
+	background-image: url(../img/twitter.png);
 }
 
 .social a[href*="plus.google.com"] {
-    background-image: url(../img/googleplus.png);
+	background-image: url(../img/googleplus.png);
 }
 
 .menu-departamentos li ul {
-    display: none;
+	display: none;
 }
 
 .menu-departamentos li:hover ul {
-    display: block;
+	display: block;
 }
 
 .menu-departamentos ul ul li {
 }
 
 .menu-departamentos li li a:before {
-    
-    padding-right: 3px;
-    margin-right: 5px;
+	
+	padding-right: 3px;
+	margin-right: 5px;
 }
 .painel h2:before {
-    content: '\2756';
-    padding-right: 5px;
-    opacity: 0.4;
+	content: '\2756';
+	padding-right: 5px;
+	opacity: 0.4;
 }
 
 .painel {
-    border-radius: 4px;
-    box-shadow: inset 1px 1px 4px #999;
+	border-radius: 4px;
+	box-shadow: inset 1px 1px 4px #999;
 }
 
 .painel h2 {
-    text-shadow: 1px 1px 2px rgba(255,255,255,0.8);
+	text-shadow: 1px 1px 2px rgba(255,255,255,0.8);
 }
 
 /* RESPONSÁVEL POR FAZER O FUNDO (FALTA AJUSTAR LAYOUT) */
 .painel li:hover {
-    background-color: rgba(255,255,255,0.8);
-    box-shadow: 0 0 5px #333;
-    transition: 0.7s;
-    transform: scale(1.2);
-    transform: scale(1.2) rotate(-5deg);
-    transition: 0.7s ease-in;
+	background-color: rgba(255,255,255,0.8);
+	box-shadow: 0 0 5px #333;
+	transition: 0.7s;
+	transform: scale(1.2);
+	transform: scale(1.2) rotate(-5deg);
+	transition: 0.7s ease-in;
   }
 
 .painel li {
-    transition: 0.7s ease-out;
+	transition: 0.7s ease-out;
 }
 
 /* */
 .busca {
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
 }
 
 .painel li:nth-child(2n):hover {
@@ -273,34 +273,37 @@ transform: scale(1.2) rotate(5deg);
 }
 
 header h1 {
-    text-align: center;
+	text-align: center;
 }
 
 header h1 img {
-    max-width: 50%;
+	max-width: 50%;
 }
 
 .busca, .menu-departamentos, .destaque img {
   margin-right: 0;
-  width: 70%;
+  width: 100%;
 }
 
 
 @media only screen and (max-width: 780px) {
 
-    .painel li {
-        width: 47%; 
-    }
+	.painel li {
+		width: 47%; 
+	}
 
-    .busca, .menu-departamentos, .destaque img {
-        width: 100%;
-    }
+	.busca, .menu-departamentos, .destaque img {
+		width: 100%;
+	}
 }
 
 @media only screen and (max-width: 480px) {
 
-    .painel li {
-        width: 100%; 
-    }
+	.painel li {
+		width: 100%; 
+	}
+	.painel img {
+		width: 100%
+	}
 
 }
