--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,14 +1,14 @@
-.sacola {
+.sacola{
 	background: url(../img/sacola.png) no-repeat top right;
-	font-size: 14px;
-	padding-right: 35px;
+	font-size:14px;
+	width:140px;
+	padding-right:35px;
+	text-align:right;
 	padding-top: 8px;
-	text-align: right;
-	width: 140px;
-	position: absolute;
-	top: 0;
-	right: 0;
-	display: none;
+	position:absolute;
+	top:0;
+	right:0;
+	/* display: none; */
 }
 
 .menu-opcoes ul {
@@ -89,6 +89,7 @@ header {
   margin-right: 10px;
   width: 230px;
   float: left;
+  height: 174px;
 }
 
 .busca h2, .busca form, .menu-departamentos h2 {
