--- a/css/produto.css
+++ b/css/produto.css
@@ -86,7 +86,7 @@ label[for=azul]:after {
 
  .produto p {
 	 font-size: 1.2em;
-	 font-style: italic;
+	 /* font-style: italic; */
 	 margin-bottom: 1em;
  }
 
