--- a/css/produto.css
+++ b/css/produto.css
@@ -8,7 +8,7 @@ fieldset {
 }
 
 .cores label:after {
-	content: '';  
+	content: '';
 	display: block;
 	border-radius: 50%;
 	width: 50px;
@@ -83,7 +83,7 @@ label[for=preto]:after {
 	color: #333;
 	line-height: 1.3;
 	/* margin-top: 2em; */
-	font-size: 1.2em;   
+	font-size: 1.2em;
 }
 
  .produto h1 {
@@ -110,6 +110,7 @@ label[for=preto]:after {
 	width: 20%;
 	float: left;
 	margin: 0 10px;
+	height: 100px;
 }
 .comprar {
 	background: #91bd3c;
@@ -139,24 +140,24 @@ label[for=preto]:after {
 		/* padding-left: 40%; */
 		font-size: 1.2em;
 	}
-   
+
 	.cores {
 		/* eu era relative antes; reinicio para static para evitar
 		   que a foto se posicione com relação a mim
 		*/
 		position: static;
-   
+
 		/* reinicio meu padding-top que tinha antes e não preciso mais */
 		padding: 0;
 	}
-   
+
 	.cores legend {
 		/* eu era absolute antes, para ter o mesmo comportamento no Chrome e
 		   no Firefox; agora quero voltar ao fluxo da página
 		*/
 		position: static;
 	}
-   
+
 	.cores label img {
 		/* imagem se posiciona absolutamente à esquerda com relação ao .produto */
 		position: absolute;
@@ -171,7 +172,7 @@ label[for=preto]:after {
 		border-color: threedface;
 		border-image: initial;
 	}
-   
+
 	.cores label:after {
 		/* as bolinhas coloridas tinham posição absoluta.
 		   não precisamos mais, basta flutuar uma do lado da outra */
@@ -245,15 +246,3 @@ tr:nth-child(2n) {
 .tamanho {
 	/* position:relative */
 }
-
-
-
-
-
-
-
-
-
-
-
-
