--- a/css/estilos.css
+++ b/css/estilos.css
@@ -90,9 +90,8 @@ header {
 
 .busca, .menu-departamentos {
   margin-right: 10px;
-  width: 230px;
+  width: 20%;
   float: left;
-  height: 174px;
 }
 
 .busca h2, .busca form, .menu-departamentos h2 {
