--- a/css/estilos.css
+++ b/css/estilos.css
@@ -32,7 +32,9 @@ ul {
 	list-style: none;
 	position: relative;
 }
-
+.navbar-nav > li:hover {
+	background: #c3c3c3;
+}
 ul li itens:hover {
 	background: #d9d9d9;
 }
@@ -40,7 +42,12 @@ ul li itens:hover {
 ul li {
 	display: block;
 }
-	
+.input-busca {
+	width: 250px !important;
+	float: right;
+	margin-top: 9px;
+	margin-right: 15px;
+}
 .sub-menu {
 	position: absolute;
 	width: 200px;
@@ -55,7 +62,7 @@ ul li {
 }
 .menu-opcoes ul li {
 	display: inline-block;
-	
+
 	margin: 5px;
 }
 
@@ -63,7 +70,7 @@ ul li {
 	margin: 0 auto;
 	width: 96%;
   }
- 
+
 .logotipo {
 	position: relative;
 	top: 20px;
@@ -73,7 +80,7 @@ ul li {
 header {
 	position: relative;
 }
- 
+
 .menu-opcoes {
 	bottom: 0;
 	right: 0;
@@ -101,13 +108,13 @@ header {
 .menu-departamentos li {
   background-color: #d9d9d9;
   margin-bottom: 1px;
-  padding: 5px 10px;
+  padding: 8px 15px;
 }
 
 .menu-departamentos a {
   color: #333333;
   text-decoration: none;
-} 
+}
 
 .busca input {
 	vertical-align: middle;
@@ -119,7 +126,7 @@ header {
 
 .menu-departamentos {
 	clear: left;
-	margin-top: 10px;
+	/* margin-top: 10px; */
 	padding-bottom: 10px;
 }
 
@@ -186,7 +193,7 @@ footer {
 	background-image: url(../img/fundo-rodape.png);
 	clear: both;
 	padding: 20px 0;
-	
+
 }
 
 footer .container {
@@ -206,7 +213,7 @@ footer .container {
 
 	/* image replacement */
 	display: block;
-	text-indent: -9999px;  
+	text-indent: -9999px;
 }
 
 .social li {
@@ -226,6 +233,9 @@ footer .container {
 	background-image: url(../img/googleplus.png);
 }
 
+.menu-departamentos ul {
+	padding: 0;
+}
 .menu-departamentos li ul {
 	display: none;
 }
@@ -235,7 +245,7 @@ footer .container {
 }
 
 .menu-departamentos ul ul li {
-	
+
 }
 
 .menu-departamentos li li a:before {
@@ -287,6 +297,15 @@ footer .container {
 transform: scale(1.2) rotate(5deg);
 }
 
+.bd-example {
+	padding: 1.5rem;
+    margin-right: 0;
+    margin-left: 0;
+    border-width: .2rem;
+	position: relative;
+    border: solid #f8f9fa;
+}
+
 header h1 {
 	text-align: center;
 }
@@ -302,7 +321,7 @@ header h1 img {
 @media only screen and (max-width: 780px) {
 
 	.painel li {
-		width: 47%; 
+		width: 47%;
 	}
 
 	.busca, .menu-departamentos, .destaque img {
@@ -313,7 +332,7 @@ header h1 img {
 @media only screen and (max-width: 480px) {
 
 	.painel li {
-		width: 100%; 
+		width: 100%;
 	}
 	.painel img {
 		width: 100%
