--- a/css/estilos.css
+++ b/css/estilos.css
@@ -338,3 +338,25 @@ header h1 img {
 		width: 100%
 	}
 }
+
+#slider {
+	list-style: none;
+	width: 550;
+	height: 490px;
+	margin:0 auto;
+	padding: 0;
+	overflow: hidden;
+	position: relative;
+	float: right;
+	
+}
+
+#slider li {
+	position: relative;
+	z-index: 0;
+	/* display: none; */
+}
+
+#slider li.sliderActive {
+	z-index: 1;
+}
