--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,8 +22,9 @@
 body {
 	color: #333333;
 	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	/* font-family: Gotham,Helvetica Neue,Helvetica,Arial,sans-serif; */
 	margin: 0;
-	background-color: #d9d9d9;
+	/* background-color: #d9d9d9; */
 }
 .clear {
 	clear: both;
@@ -133,6 +134,111 @@ header {
 .destaque {
 	margin-top: 10px;
 }
+
+/*********************************************************************
+					 		NOVO MENU
+*********************************************************************/
+.app__header__menu {
+	background-color: #fff;
+    border-bottom: .1rem solid #ccc;
+}
+.app__menu__level1 {
+	display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    height: 3.2rem;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    width: 100%;
+}
+.app__menu__level1 a {
+	-webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    color: #000;
+    display: -webkit-inline-box;
+    display: -webkit-inline-flex;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    position: relative;
+    text-transform: uppercase;
+	padding: 20px;
+}
+.app__menu__level1 a.is-active {
+	font-weight: 700;
+}
+
+
+
+/*********************************************************************
+						ITENS DE PRODUTOS
+*********************************************************************/
+.app__home__cards {
+    text-align: center;
+}
+.app__home__cards__item {
+	padding-top: 4rem;
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
+    width: 33.3%;
+	float: left;
+}
+.app__home__cards a {
+    display: block;
+}
+.app__transition__wrapper {
+    background: #f4f4f4;
+    padding-bottom: 100%;
+    position: relative;
+}
+.app__transition__wrapper img {
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+	height: auto;
+	max-width: 100%;
+	vertical-align: middle;
+	border-style: none;
+}
+.app__home__cards__details, .app__home__cards__social {
+    padding-bottom: 0;
+    padding: 2rem 0;
+}
+.app__home__cards__item h3 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100%;
+    font-size: 2.2rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #000;
+	text-decoration: none;
+}
+.btn:not(:disabled):not(.disabled) {
+    cursor: pointer;
+}
+.app__home__cards__details>button, .app__home__cards__social>button {
+    display: inline-block;
+    font-size: 1.2rem;
+    margin-top: 1rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+	color: #000;
+    background-color: transparent;
+    background-image: none;
+    border-color: #000;
+    border-radius: 0;
+}
+
+
+
 
 .painel {
 	/* margin: 10px 0;
@@ -350,7 +456,7 @@ header h1 img {
 	overflow: hidden;
 	position: relative;
 	float: right;
-	
+
 }
 
 #slider li {
