--- a/css/produto.css
+++ b/css/produto.css
@@ -206,10 +206,6 @@ fieldset {
 	}
 }
 
-.detalhes {
-	/* padding: 2em 0; */
-}
-
 .detalhes h2 {
 	font-size: 1.5em;
 	line-height: 2;
@@ -231,17 +227,21 @@ table {
 	border-spacing: 0.2em;
 	border-collapse: separate;
 }
+
 thead {
 	background-color: rgb(197, 193, 193);
 }
+
 thead th {
 	font-weight: bold;
 	padding: 0.3em 1em;
 	text-align: center;
 }
+
 td {
 	padding: 0.3em;
 }
+
 tr:nth-child(2n) {
 	background-color: rgb(231, 229, 229);
 }
@@ -251,16 +251,13 @@ tr:nth-child(2n) {
 	margin-top: 1em;
 	border-top: 2px solid #ccc;
 }
+
 .cores label img {
 	border: 2px solid #ccc;
 }
 
 .form-control:invalid {
 	border: 1px solid #cc0000;
-}
-
-.tamanho {
-	/* position:relative */
 }
 
 label.radio-inline, label.radio-inline-cor {
@@ -279,6 +276,15 @@ label.radio-inline.selected, label.radio-inline-cor.selected {
     padding: 10px;
     border-radius: 60px;
 }
+
+label.radio-inline {
+	width: 45px;
+	height: 45px;
+	text-align: center;
+	/* float: left; */
+	margin: 5px;
+}
+
 label.radio-inline-cor {
 	width: 50px;
 	height: 50px;
